<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".Recomendaciones">


    <!-- Contenedor para el resto del contenido -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <!-- RelativeLayout para el encabezado -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:background="@color/purple">

            <ImageView
                android:id="@+id/ivMarca"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/marca"
                android:layout_marginStart="20dp"
                android:layout_centerVertical="true"
                android:contentDescription="@string/descripcionMarca"/>

            <ImageButton
                android:id="@+id/btnUsuario"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/user"
                android:background="@android:color/transparent"
                android:layout_marginEnd="20dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:scaleType="fitCenter"
                android:contentDescription="@string/descripcion_btnUsuario"/>

        </RelativeLayout>

        <!-- Encabezado de texto -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/tvRecomendaciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_recomendaciones"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:layout_marginStart="15dp"
                android:fontFamily="sans-serif-medium"/>

        </LinearLayout>

        <!-- Contenedor de las imágenes -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">

            <!-- Imagen del pantalón -->
            <ImageView
                android:id="@+id/ivBottom"
                android:layout_width="0dp"
                android:layout_height="400dp"
                android:layout_weight="2"
                android:src="@drawable/bottom"
                android:scaleType="fitCenter"
                android:contentDescription="@string/descripcion_bottom"/>

            <!-- Contenedor de la camisa y los zapatos -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="380dp"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Imagen de la camisa -->
                <ImageView
                    android:id="@+id/ivTop"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.5"
                    android:src="@drawable/top"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/descripcion_top"/>

                <!-- Imagen de los zapatos -->
                <ImageView
                    android:id="@+id/ivShoes"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:src="@drawable/shoes"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/descripcion_shoes"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>




    <!-- LinearLayout Shuffle/Usar/Fav -->
    <LinearLayout
        android:id="@+id/llShuffleUsarFav"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_above="@id/llMenu"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnShuffle"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/shuffle"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:gravity="center"
                android:contentDescription="@string/btn_shuffle"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <Button
                android:id="@+id/btnUsar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_usar"
                android:textSize="22sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnFav"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/fav"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:gravity="center"
                android:contentDescription="@string/btn_fav"/>

        </LinearLayout>

    </LinearLayout>

    <!-- Menú LinearLayout -->
    <LinearLayout
        android:id="@+id/llMenu"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/purple"
        android:gravity="top"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnRecomendaciones"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/recomendacion"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:gravity="center"
                android:contentDescription="@string/tv_recomendacionesMenu"/>

            <TextView
                android:id="@+id/tvRecomendacion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/tv_recomendacionesMenu"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnCloset"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/closet"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:gravity="center"
                android:contentDescription="@string/tv_miClosetMenu"/>

            <TextView
                android:id="@+id/tvMiClosetMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_miClosetMenu"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@color/darkPurple">

            <ImageButton
                android:id="@+id/btnAgregarPrenda"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/agregar"
                android:scaleType="fitCenter"
                android:gravity="center"
                android:background="@android:color/transparent"
                android:contentDescription="@string/descripcion_btnAgregarPrenda"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnHistorial"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/historial"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:gravity="center"
                android:contentDescription="@string/tv_historialMenu"/>

            <TextView
                android:id="@+id/tvHistorialMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_historialMenu"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:gravity="center"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center">

            <ImageButton
                android:id="@+id/btnFavoritosMenu"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/favorito"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:gravity="center"
                android:contentDescription="@string/tv_favoritosMenu"/>

            <TextView
                android:id="@+id/tvFavoritosMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_favoritosMenu"
                android:textColor="@android:color/white"
                android:textSize="15sp"
                android:gravity="center"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>